<resources>
    <string name="app_name">Ji</string>
    <string name="ji_input_view_delete">删除</string>
    <string name="ji_input_view_finish">完成</string>
    <string name="ji_input_view_hint">请输入</string>
    <string name="ji_common_date">日期</string>
    <string name="ji_common_describe">备注</string>
    <string name="ji_common_expense">支出</string>
    <string name="ji_common_income">收入</string>

    <string name="alert_alarm">提示</string>
    <string name="alert_ok">确定</string>
    <string name="alert_cancel">取消</string>
    <string name="alert_message_delete">是否删除？</string>

    <!--默认提供的种类-->
    <string name="goods_type_shop">购物</string>
    <string name="goods_type_correspond">通讯</string>
    <string name="goods_type_housing">住房</string>
    <string name="goods_type_common">一般</string>
    <string name="goods_type_traffic">交通</string>
    <string name="goods_type_study">学习</string>
    <string name="goods_type_travel">旅游</string>
    <string name="goods_type_car">汽车</string>
    <string name="goods_type_pet">宠物</string>
    <string name="goods_type_sport">运动</string>
    <string name="goods_type_book">书籍</string>
    <string name="goods_type_maintain">维修</string>
    <string name="goods_type_donate">捐赠</string>
    <string name="goods_type_gift">礼物</string>
    <string name="goods_type_entertainment">娱乐</string>
    <string name="goods_type_eating">美食</string>
    <string name="goods_type_lottery">彩票</string>
    <string name="goods_type_financing">理财</string>
    <string name="goods_type_add">增加</string>
    <!--addtype dialog fragment-->
    <string name="title_input_goods_name">填写商品名称</string>
    <string name="dialog_title_input">弹窗标题</string>
    <string name="goods_input_name_hint">不超过四个字</string>
    <string name="dialog_input_limit_200">不超过200个字</string>
    <string name="ji_btn_cancel">取消</string>
    <string name="ji_btn_complete">完成</string>
    <string name="title_activity_base_list">BaseListActivity</string>

</resources>
