<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:padding="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:scaleType="centerCrop"
            android:src="@drawable/ic_image_black_24dp"
            android:id="@+id/iv_photo"
            android:layout_width="56dp"
            android:layout_height="56dp" />

        <EditText
            android:textSize="20sp"
            android:layout_weight="1"
            android:maxLength="14"
            android:maxLines="1"
            android:gravity="right|center_vertical"
            android:focusable="false"
            android:paddingRight="10dp"
            android:hint="@string/ji_input_view_hint"
            android:id="@+id/et_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:minHeight="50dp" />
        <ImageView
            android:layout_marginRight="5dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_clear_black_24dp"
            android:id="@+id/iv_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp">

        <Button
            android:textSize="19sp"
            android:textColor="@color/colorWhite"
            android:id="@+id/btn_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="1"
            app:layout_constraintDimensionRatio="W,3:4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.22" />

        <Button
            android:textSize="19sp"
            android:id="@+id/btn_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="2"
            android:textColor="@color/colorWhite"

            app:layout_constraintDimensionRatio="W,3:4"
            app:layout_constraintLeft_toRightOf="@+id/btn_1"
            app:layout_constraintRight_toLeftOf="@id/btn_3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.22" />

        <Button
            android:textSize="19sp"
            android:id="@+id/btn_3"
            android:textColor="@color/colorWhite"

            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="3"
            app:layout_constraintDimensionRatio="W,3:4"
            app:layout_constraintLeft_toRightOf="@+id/btn_2"
            app:layout_constraintRight_toLeftOf="@id/btn_delete"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.22" />

        <Button
            android:textSize="16sp"
            android:textColor="@color/colorWhite"

            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/ji_input_view_delete"
            app:layout_constraintBottom_toBottomOf="@id/btn_6"
            app:layout_constraintLeft_toRightOf="@id/btn_3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_3"
            app:layout_constraintWidth_percent="0.28" />

        <Button
            android:textSize="19sp"
            android:textColor="@color/colorWhite"

            android:id="@+id/btn_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="4"
            app:layout_constraintDimensionRatio="W,3:4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_5"
            app:layout_constraintTop_toBottomOf="@id/btn_1"
            app:layout_constraintWidth_percent="0.22" />

        <Button
            android:textSize="19sp"
            android:textColor="@color/colorWhite"

            android:id="@+id/btn_5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="5"
            app:layout_constraintDimensionRatio="W,3:4"
            app:layout_constraintLeft_toRightOf="@+id/btn_4"
            app:layout_constraintRight_toLeftOf="@id/btn_6"
            app:layout_constraintTop_toBottomOf="@id/btn_1"
            app:layout_constraintWidth_percent="0.22" />

        <Button
            android:textSize="19sp"
            android:textColor="@color/colorWhite"

            android:id="@+id/btn_6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="6"
            app:layout_constraintDimensionRatio="W,3:4"
            app:layout_constraintLeft_toRightOf="@+id/btn_5"
            app:layout_constraintRight_toLeftOf="@id/btn_delete"
            app:layout_constraintTop_toBottomOf="@id/btn_1"
            app:layout_constraintWidth_percent="0.22" />

        <Button
            android:textSize="19sp"
            android:textColor="@color/colorWhite"

            android:id="@+id/btn_7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="7"
            app:layout_constraintDimensionRatio="W,3:4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_8"
            app:layout_constraintTop_toBottomOf="@id/btn_4"
            app:layout_constraintWidth_percent="0.22" />

        <Button
            android:textSize="19sp"

            android:textColor="@color/colorWhite"
            android:id="@+id/btn_8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="8"
            app:layout_constraintDimensionRatio="W,3:4"
            app:layout_constraintLeft_toRightOf="@+id/btn_7"
            app:layout_constraintRight_toLeftOf="@id/btn_9"
            app:layout_constraintTop_toBottomOf="@id/btn_4"
            app:layout_constraintWidth_percent="0.22" />

        <Button
            android:textSize="19sp"
            android:textColor="@color/colorWhite"

            android:id="@+id/btn_9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="9"
            app:layout_constraintDimensionRatio="W,3:4"
            app:layout_constraintLeft_toRightOf="@+id/btn_8"
            app:layout_constraintRight_toLeftOf="@id/btn_delete"
            app:layout_constraintTop_toBottomOf="@id/btn_4"
            app:layout_constraintWidth_percent="0.22" />

        <Button
            android:textColor="@color/colorWhite"
            android:textSize="34sp"
            android:id="@+id/btn_dot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="."
            app:layout_constraintDimensionRatio="W,3:4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_8"
            app:layout_constraintTop_toBottomOf="@id/btn_7"
            app:layout_constraintWidth_percent="0.22" />

        <Button
            android:textSize="19sp"
            android:textColor="@color/colorWhite"
            android:id="@+id/btn_0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="0"
            app:layout_constraintBottom_toBottomOf="@id/btn_dot"
            app:layout_constraintLeft_toLeftOf="@id/btn_8"
            app:layout_constraintRight_toRightOf="@+id/btn_9"
            app:layout_constraintTop_toTopOf="@id/btn_dot" />

        <Button
            android:textSize="16sp"
            android:textColor="@color/colorWhite"

            android:id="@+id/btn_finish"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/ji_input_view_finish"
            app:layout_constraintBottom_toBottomOf="@id/btn_dot"
            app:layout_constraintLeft_toRightOf="@+id/btn_9"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_9"
            app:layout_constraintWidth_percent="0.28" />
    </android.support.constraint.ConstraintLayout>
</LinearLayout>
</RelativeLayout>